--- a/index.html
+++ b/index.html
@@ -38,6 +38,15 @@
                     <i class="fa-solid fa-chevron-right"></i>
                 </div>
             </div>
+
+            <div class="row d-flex justify-content-center">
+                <div class="col-auto">
+                    <button class="stop-autoplay btn btn-dark mt-3 d-flex justify-content-center">
+                        STOP
+                    </button>
+                </div>
+            </div>
+            
         </div>
         
         <!-- Bootstrap JS -->
